[package]
name = "json4web"
version = "0.1.0"
authors = ["hjiayz <hjiayz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
thiserror = "1.0.9"
base64 = "0.11.0"
ryu = "1.0.2"

[dev-dependencies]
serde_derive = "1.0.104"
serde_bytes = "0.11.3"
