[package]
name = "json4web"
version = "0.1.0"
authors = ["hjiayz <hjiayz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version="1.0.104", default-features = false, features = ["alloc" ] }
base64 ={ version="0.11.0", default-features = false, features = ["alloc" ] }
ryu = "1.0.2"

[dev-dependencies]
serde_derive = "1.0.104"
serde_bytes = "0.11.3"
wasm-bindgen-test = "0.3.8"
